# reliability-aware-preference-learning

./: .flake8  .gitignore  README.md  environment.yml  lint.sh  pyproject.toml  requirements.txt  run_one.sh  run_sweep.sh  ts_enqueue.ipynb
.github/workflows/: ci.yml
RAPL/datasets/ARM_LLM_prompting/: difficulty_evaluation_prompt_cot.txt  difficulty_evaluation_prompt_cot_o1.txt  difficulty_evaluation_prompt_cot_o3_optimized.txt  difficulty_evaluation_prompt_cot_scratch_space.txt  difficulty_evaluation_prompt_individual_question.txt  difficulty_evaluation_prompt_pairwise.txt  difficulty_evaluation_prompt_simpler_cot.txt  difficulty_evaluation_prompt_zero_shot.txt  fireworks_api_generation.py  generate_difficulty_scores_llama.ipynb  pairwise_difficulty.py  scratch_space_testing.ipynb
RAPL/datasets/LIE/: LIE_dataset_test.csv
RAPL/datasets/LLM_ARM_generation/: ARM_difficulty.txt  claude-opus-4-20250514_responses_v1.json  claude-opus-4-20250514_responses_v1.txt  claude-opus-4-20250514_responses_v2.json  claude-opus-4-20250514_responses_v2.txt  gemini_responses_v1.json  gemini_responses_v1.txt  gemini_responses_v2.json  gemini_responses_v2.txt  generate_litellm.py  o3_responses_v1.json  o3_responses_v1.txt  o3_responses_v2.json  o3_responses_v2.txt  process_rubrics.ipynb
RAPL/datasets/TRUE/: full_TRUE_dataset.csv  sanity_check_dataset.csv
RAPL/model_training/: dpo_hf_script.py  evaluate_models.py  train_TRUE_model_next_token.py  train_TRUE_model_next_token_sft.py  train_TRUE_value_head.py  train_reward_model.py
data/: evaluate_results.ipynb
(+129 files in other folders)
